# scholarmis-htmx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/scholarmis/htmx/: actions.py  apps.py  broadcast.py  consumers.py  context_processors.py  download.py  helpers.py  imports.py  message.py  progress.py  response.py  tables.py  tasks.py
src/scholarmis/htmx/notify/: urls.py  views.py
src/scholarmis/htmx/templates/htmx/dataview/: dataview.html  grid.html  gridview.html  list.html  listview.html  pagination.html
src/scholarmis/htmx/templates/htmx/download/: base.html  container.html  error.html  launcher.html  link.html
src/scholarmis/htmx/templates/htmx/filter/: filter.html
src/scholarmis/htmx/templates/htmx/import/: importview.html
src/scholarmis/htmx/templates/htmx/loader/: loader.html
src/scholarmis/htmx/templates/htmx/menu/: contextmenu.html
src/scholarmis/htmx/templates/htmx/message/: message.html
src/scholarmis/htmx/templates/htmx/modal/: confirm.html  modal.html  modalview.html
src/scholarmis/htmx/templates/htmx/notify/: indicator.html  item.html  list.html  notifications.html  websocket.html
src/scholarmis/htmx/templates/htmx/search/: list.html  searchview.html
src/scholarmis/htmx/templates/htmx/table/: bulkaction.html  header.html  pagination.html  table.html  tableview.html
src/scholarmis/htmx/templates/htmx/tabs/: tabview.html
src/scholarmis/htmx/templatetags/: htmx.py
src/scholarmis/htmx/views/: forms.py  generic.py  mixins.py  modals.py  tables.py  tabs.py  wizard.py
(+4 files in other folders)
