[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarmis-htmx"
version = "1.0.4"
description = "Scholarmis HTMX"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["scholarmis-htmx"]
authors = [
    {name = "Brian Simpokolwe", email = "briansimpokolwe@gmail.com"}
]

classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scholarmis-framework>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/scholarmis/scholarmis-htmx"


[tool.hatch.build.targets.wheel]
packages = ["src/scholarmis/htmx"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""